Add jit selection to cmakelist, bug srun in preload mode due to asm_jit.c (fixme)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ endif()
 if(WI4MPI_COMPILER MATCHES GNU)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -DDEBUG")
+    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(WI4MPI_FORT_CALL "-DGFORT_CALL")
     set(CC "gcc")
@@ -48,6 +49,7 @@ if(WI4MPI_COMPILER MATCHES GNU)
 else(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -DDEBUG")
+    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared -pthread")
     set(WI4MPI_FORT_CALL "-DIFORT_CALL")
     set(CC "icc")
@@ -59,6 +61,8 @@ if(WI4MPI_REALEASE MATCHES DEBUG)
    set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_DEBUG})
 elseif(WI4MPI_REALEASE MATCHES RELEASE)
    set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_RELEASE})
+elseif(WI4MPI_REALEASE MATCHES GCC_JIT)
+	 set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_GCC_JIT})
 else()
    set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_NORMAL})
 endif()
