Fix right on installed files + set configuration file generation on cmake lau,ch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ enable_language(C Fortran)
 
 set(VERSION_MAJOR 3)
 set(VERSION_MINOR 0)
-set(VERSION_PATCH 5)
+set(VERSION_PATCH 7b)
+
+set(WI4MPI_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 #Path to CMake Module
 set(CMAKE_MODULE_PATH
@@ -85,12 +87,17 @@ if(MPI_C_FOUND AND MPI_Fortran_FOUND) #Need to be OpenMPI
     if(NOT ERR_VAR2)
       message(FATAL_ERROR "Be sure to have an OpenMPI librarie in your PATH")
     endif()
+		get_filename_component(OPENMPI_ROOT ${MPI_C_INCLUDE_PATH} DIRECTORY)
 endif()
 
 find_package(Threads)
 if(NOT CMAKE_THREAD_LIBS_INIT)
 	message(FATAL_ERROR "Be sure to have Pthread available on you system")
 endif()
+
+#Setting wi4mpi.cfg
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/preload/etc/wi4mpi.cfg.in ${CMAKE_CURRENT_BINARY_DIR}/wi4mpi.cfg)
+
 
 #Source subdirectory
 add_subdirectory(src)
