--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -237,47 +237,76 @@ install(TARGETS
         wi4mpi_INTEL_OMPI
         wi4mpi_OMPI_INTEL
         wi4mpi_OMPI_OMPI
-        LIBRARY DESTINATION libexec/wi4mpi)
+        LIBRARY DESTINATION libexec/wi4mpi
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+
 
 #fakelibCXX
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_cxx.so.1.so DESTINATION libexec/wi4mpi/fakelibCXX
-				RENAME libmpi_cxx.so.1)
+				RENAME libmpi_cxx.so.1
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_cxx.so.12.so DESTINATION libexec/wi4mpi/fakelibCXX
-				RENAME libmpi_cxx.so.12)
+				RENAME libmpi_cxx.so.12
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 
 #fakelibINTEL
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpigf.so.4.so DESTINATION libexec/wi4mpi/fakelibINTEL
-				RENAME libmpigf.so.4)
+				RENAME libmpigf.so.4
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_mt.so.4.so DESTINATION libexec/wi4mpi/fakelibINTEL
-				RENAME libmpi_mt.so.4)
+				RENAME libmpi_mt.so.4
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi.so.12.so DESTINATION libexec/wi4mpi/fakelibINTEL
-				RENAME libmpi.so.12)
+				RENAME libmpi.so.12
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi.so.1.so DESTINATION libexec/wi4mpi/fakelibINTEL
-				RENAME libmpifort.so.12)
+				RENAME libmpifort.so.12
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 
 #fakelibOMPI
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_f77.so.1.so	 DESTINATION libexec/wi4mpi/fakelibOMPI
-				RENAME libmpi_f77.so.1)	
+				RENAME libmpi_f77.so.1
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)	
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_f90.so.1.so	 DESTINATION libexec/wi4mpi/fakelibOMPI
-				RENAME	libmpi_f90.so.1)
+				RENAME	libmpi_f90.so.1
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_mpifh.so.2.so DESTINATION libexec/wi4mpi/fakelibOMPI
-				RENAME	libmpi_mpifh.so.2)
+				RENAME	libmpi_mpifh.so.2
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi.so.1.so			 DESTINATION libexec/wi4mpi/fakelibOMPI
-				RENAME	libmpi.so.1)
+				RENAME	libmpi.so.1
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 				
 
 #Interface libraries
 #-------------------
 install(TARGETS
         mpi
-        LIBRARY DESTINATION lib)
+        LIBRARY DESTINATION lib
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(TARGETS
         wi4mpi_CCC_OMPI 
-        LIBRARY DESTINATION lib_OMPI)
+        LIBRARY DESTINATION lib_OMPI
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 install(TARGETS
         wi4mpi_CCC_INTEL
-        LIBRARY DESTINATION lib_IMPI)
+        LIBRARY DESTINATION lib_IMPI
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
 
 #Headers
 #-------
@@ -299,7 +328,7 @@ install(FILES
         ${CMAKE_BINARY_DIR}/src/mpi_base.mod	 
         ${CMAKE_BINARY_DIR}/src/mpi_constants.mod
         ${CMAKE_BINARY_DIR}/src/mpi_sizeofs.mod DESTINATION include
-        PERMISSIONS WORLD_READ OWNER_WRITE GROUP_WRITE WORLD_EXECUTE
+        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 
 #Bin
@@ -311,18 +340,18 @@ install(FILES
         interface/lib_cccmpi/bin/mpif77
         interface/lib_cccmpi/bin/mpif90
         interface/lib_cccmpi/bin/mpirun DESTINATION bin
-        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE GROUP_WRITE
+        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 
 install(FILES
         preload/bin/wi4mpi DESTINATION bin
-        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE GROUP_WRITE
+        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 
 #Wi4mpi config
 #-------------
 
 install(FILES
-				preload/etc/wi4mpi.cfg DESTINATION etc
-				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE GROUP_WRITE
+				${CMAKE_CURRENT_BINARY_DIR}/../wi4mpi.cfg DESTINATION etc
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
