New tables: Set and fix c2f/f2c and fortran/C coherency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -255,6 +255,11 @@ install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_cxx.so.12.so DESTINATION libexec/wi
 				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 
+install(FILES ${CMAKE_BINARY_DIR}/src/libmpi_cxx.so.12.so DESTINATION libexec/wi4mpi/fakelibCXX
+				RENAME libmpicxx.so.12
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+
 #fakelibINTEL
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpigf.so.4.so DESTINATION libexec/wi4mpi/fakelibINTEL
 				RENAME libmpigf.so.4
