Update version + add static library installation procedure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -409,6 +409,11 @@ install(TARGETS
         LIBRARY DESTINATION lib_IMPI
 				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
+install(FILES ${CMAKE_BINARY_DIR}/src/libmpi.a
+				DESTINATION lib
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+				
 
 #Headers
 #-------
