--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -126,7 +126,12 @@ set_target_properties(wi4mpi_CCC_INTEL
                       PROPERTIES
                       COMPILE_FLAGS "${WI4MPI_FLAGS} ${WI4MPI_FORT_CALL} -std=c99 -DOMPI_INTEL -D_GNU_SOURCE -Dompi_mpich"
                      )
-
+if(FC MATCHES gfortran) 
+set_target_properties(mpi_mod
+                      PROPERTIES
+                      COMPILE_FLAGS "-ffree-line-length-0"
+                     )
+endif()
 #Link options
 #------------
 
